Colaboratory를 통해 생성됨

--- a/20210317.ipynb
+++ b/20210317.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNIH72dIGU2/mDGTyJX7wZL",
+      "authorship_tag": "ABX9TyPx80gioVml1UD5UsP/3kkg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,15 +31,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "auQEzB1EubjF",
-        "outputId": "2569bd66-7f0b-4851-c401-ecdbcaad642d"
+        "outputId": "022dc555-5ddb-46e8-ab06-ff4e088b99ea"
       },
       "source": [
-        "for i in ['Yu','Nayeong','나영','유나영','융융이']:\r\n",
+        "for i in ['Yu',0.1,'Nayeong',1,2,3,'나영','유나영','융융이']:\r\n",
         "  for j in range(3,9):\r\n",
         "    if type(i)==str:\r\n",
         "      print(i,j)"
       ],
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
